syntax = "proto3";

package controlplane;

option go_package = "github.com/zhinea/sylix/internal/infra/proto/controlplane";

import "common/common.proto";

service DatabaseService {
    rpc Create(Database) returns (DatabaseResponse);
    rpc Get(DatabaseId) returns (DatabaseResponse);
    rpc All(common.Empty) returns (DatabasesResponse);
    rpc Delete(DatabaseId) returns (DatabaseMessageResponse);
}

message DatabaseId {
    string id = 1;
}

message Database {
    string id = 1;
    string name = 2;
    string user = 3;
    string password = 4;
    string db_name = 5;
    string branch = 6;
    string server_id = 7;
    string status = 8;
    string container_id = 9;
    int32 port = 10;
    string tenant_id = 11;
    string timeline_id = 12;
    int32 pg_version = 13;
}

message DatabaseResponse {
    Database database = 1;
}

message DatabasesResponse {
    repeated Database databases = 1;
}

message DatabaseMessageResponse {
    int32 status = 1;
    string message = 2;
}
